# GenericESP

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Example/: Example.cpp  ImGuiImpl.cpp
Extensions/DefaultRenderers/: CMakeLists.txt
Extensions/DefaultRenderers/Include/GenericESP/: DefaultRenderers.hpp
Extensions/DefaultRenderers/Source/: DefaultRenderers.cpp
Include/: GenericESP.hpp
Include/GenericESP/: ESP.hpp  Flag.hpp  Mixable.hpp  OpaqueLambda.hpp  RendererFactory.hpp  UnionedRect.hpp  Util.hpp  VectorOrdering.hpp
Include/GenericESP/Abstract/: Renderable.hpp  Serializable.hpp
Include/GenericESP/BaseClasses/: Renderable.hpp  Serializable.hpp
Include/GenericESP/Config/: ConfigurableValue.hpp  DynamicConfig.hpp  Mixable.hpp  MixableConfigurationValue.hpp  StaticConfig.hpp
Include/GenericESP/Element/: Bar.hpp  Circle.hpp  Element.hpp  Flags.hpp  Line.hpp  Rectangle.hpp  SidedElement.hpp  SidedText.hpp  Text.hpp
Include/GenericESP/Enum/: Side.hpp  Text.hpp
Include/GenericESP/Renderer/: BoolRenderer.hpp  ColorRenderer.hpp  EnumRenderer.hpp  FloatRenderer.hpp  IntRenderer.hpp
Include/GenericESP/Serialization/: ImColorSerialization.hpp  Serialization.hpp
Source/: ESP.cpp  Flag.cpp  RenderFactory.cpp  UnionedRect.cpp
Source/Element/: Bar.cpp  Circle.cpp  Element.cpp  Flags.cpp  Line.cpp  Rectangle.cpp  SidedElement.cpp  SidedText.cpp  Text.cpp
Source/Serialization/: ImColorSerialization.cpp  Serialization.cpp
